--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
   <header class="container text-center">
       <img src="imagem/images.jpeg" alt="hamburguer" class="rounded-circle" width="150" height="150"
           srcset="">
-      <p class="lead">Gastronomia</p>
+      <p class="lead">ENTRE A LIDA E A VIDA URBANA</p>
       <h1>Festejando a conexão campo-cidade</h1>
       <p>Somos a hamburgueria que representa o sabor autêntico de Curitiba, trazendo para você uma experiência única em cada mordida, 
         com ingredientes frescos e aquele toque especial que só quem é de Curitiba sabe fazer!</p>
-      <p>Nossos hamburgues</p>
+      <p>Campo-Cidade</p>
       <div>
-          <p class="badge bg-secondary">Nosso hambúrguer, sua felicidade!</p>
-          <p class="badge bg-secondary">Sabor que faz bem!</p>
-          <p class="badge bg-secondary">Gastronomia</p>
-          <p class="badge bg-secondary">Gourmet</p>
+          <p class="badge bg-secondary">Integração</p>
+          <p class="badge bg-secondary">Cultura</p>
+          <p class="badge bg-secondary">Conexão</p>
+          <p class="badge bg-secondary">Tradição</p>
       </div>
   </header>
   <main class="container mt-5">
-      <h2>Sobre nossa hamburgueria</h2>
+      <h2>Um olhar sobre o Campo-Cidade</h2>
       <div class="row">
           <!-- Projeto 1 -->
           <div class="col-md-4">
               <div class="card">
                   <img src="imagem/hamburguer4 .jpg" class="card-img-top" alt="Imagem dos hamburgues ">
                   <div class="card-body">
-                      <h5 class="card-title">Sobre Nós: A Experiência do Sabor em Curitiba</h5>
+                      <h5 class="card-title">A vida no campo</h5>
                       <p class="card-text">Localizada no coração de Curitiba, nossa hamburgueria é um verdadeiro refúgio para os amantes de um bom 
                         hambúrguer. Com um compromisso inabalável com a qualidade, buscamos trazer uma experiência única em cada mordida, 
                          oferecendo não apenas um prato, mas uma verdadeira celebração do sabor.
@@ -51,7 +51,7 @@
               <div class="card">
                   <img src="imagem/hamburguer6 .jpg" class="card-img-top" alt="Imagem dos hamburgues">
                   <div class="card-body">
-                      <h5 class="card-title">Quer Sabor? Vem de Hambúrguer!</h5>
+                      <h5 class="card-title">A vida na cidade</h5>
                       <p class="card-text">Aqui, cada mordida é uma explosão de sabor que vai conquistar seu paladar. 
                         Nossos hambúrgueres são preparados com ingredientes frescos e selecionados, combinados com muito carinho e dedicação. 
                         Seja no pão ou no prato, cada opção é pensada para oferecer uma experiência única e deliciosa</p>
@@ -65,7 +65,55 @@
               <div class="card">
                   <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
                   <div class="card-body">
-                      <h5 class="card-title">O Sabor da Tradição: Hambúrgueres Artesanais que Encantam
+                      <h5 class="card-title">A conexão Campo-Cidade
+                      </h5>
+                      <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e selecionados para criar 
+                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição em cada mordida.
+                      </p>
+                      <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Nossos hamburgues</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+   <!-- Projeto 4 -->
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                  <div class="card-body">
+                      <h5 class="card-title">Expressões culturais compartilhadas
+                      </h5>
+                      <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e selecionados para criar 
+                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição em cada mordida.
+                      </p>
+                      <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Nossos hamburgues</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+  <!-- Projeto 5-->
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                  <div class="card-body">
+                      <h5 class="card-title">Histórias que conectam
+                      </h5>
+                      <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e selecionados para criar 
+                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição em cada mordida.
+                      </p>
+                      <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Nossos hamburgues</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+ <!-- Projeto 6-->
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                  <div class="card-body">
+                      <h5 class="card-title">Reflexão final 
                       </h5>
                       <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e selecionados para criar 
                         combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição em cada mordida.
@@ -76,6 +124,7 @@
           </div>
       </div>
   </main>
+
 
   <!-- Modal 1 -->
   <div class="modal" id="modal1" tabindex="-1">
