--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="container text-center">
       <img src="imagem/images.jpeg" alt="hamburguer" class="rounded-circle" width="150" height="150"
           srcset="">
-      <p class="lead">ENTRE A LIDA E A VIDA URBANA</p>
-      <h1>Festejando a conexão campo-cidade</h1>
+      <p class="lead">Entre a lida e a vida urbana</p>
+      <h1>FESTEJANDO A CONEXÃO CAMPO-CIDADE</h1>
       <p>Somos a hamburgueria que representa o sabor autêntico de Curitiba, trazendo para você uma experiência única em cada mordida, 
         com ingredientes frescos e aquele toque especial que só quem é de Curitiba sabe fazer!</p>
       <p>Campo-Cidade</p>
