--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <main class="container mt-5">
         <h2>Um olhar sobre o Campo-Cidade</h2>
         <div class="row">
+
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
@@ -85,63 +86,72 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Projeto 4 -->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
-                <div class="card-body">
-                    <h5 class="card-title">Expressões culturais compartilhadas
-                    </h5>
-                    <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e
-                        selecionados para criar
-                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição
-                        em cada mordida.
-                    </p>
-                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal4">Nossos
-                        hamburgues</button>
-                </div>
-            </div>
-        </div>
-        </div>
 
-        <!-- Projeto 5-->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
-                <div class="card-body">
-                    <h5 class="card-title">Histórias que conectam
-                    </h5>
-                    <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e
-                        selecionados para criar
-                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição
-                        em cada mordida.
-                    </p>
-                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal5">Nossos
-                        hamburgues</button>
+            <!-- Projeto 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                    <div class="card-body">
+                        <h5 class="card-title">Expressões culturais compartilhadas
+                        </h5>
+                        <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos
+                            e
+                            selecionados para criar
+                            combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da
+                            tradição
+                            em cada mordida.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal"
+                            data-bs-target="#modal4">Nossos
+                            hamburgues</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
-        <!-- Projeto 6-->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
-                <div class="card-body">
-                    <h5 class="card-title">Reflexão final
-                    </h5>
-                    <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos e
-                        selecionados para criar
-                        combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da tradição
-                        em cada mordida.
-                    </p>
-                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal6">Nossos
-                        hamburgues</button>
+
+
+            <!-- Projeto 5-->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                    <div class="card-body">
+                        <h5 class="card-title">Histórias que conectam
+                        </h5>
+                        <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos
+                            e
+                            selecionados para criar
+                            combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da
+                            tradição
+                            em cada mordida.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal"
+                            data-bs-target="#modal5">Nossos
+                            hamburgues</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
+
+            <!-- Projeto 6-->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                    <div class="card-body">
+                        <h5 class="card-title">Reflexão final
+                        </h5>
+                        <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos
+                            e
+                            selecionados para criar
+                            combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da
+                            tradição
+                            em cada mordida.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal"
+                            data-bs-target="#modal6">Nossos
+                            hamburgues</button>
+                    </div>
+                </div>
+            </div>
+
     </main>
 
 
