--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagem/hamburguer4 .jpg" class="card-img-top" alt="Imagem dos hamburgues ">
+                    <img src="imagem/infoimg.jpg" class="card-img-top" alt="vida no campo ">
                     <div class="card-body">
                         <h5 class="card-title">A vida no campo</h5>
                         <p class="card-text">Localizada no coração de Curitiba, nossa hamburgueria é um verdadeiro
