--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <img src="imagem/images.jpeg" alt="hamburguer" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Entre a lida e a vida urbana</p>
         <h1>FESTEJANDO A CONEXÃO CAMPO-CIDADE</h1>
-        <p>Somos a hamburgueria que representa o sabor autêntico de Curitiba, trazendo para você uma experiência única
-            em cada mordida,
-            com ingredientes frescos e aquele toque especial que só quem é de Curitiba sabe fazer!</p>
+        <p>Festejar a conexão entre o campo e a cidade é celebrar a união entre a origem e o destino de tudo que nos alimenta e nos move.</p>
         <p>Campo-Cidade</p>
         <div>
             <p class="badge bg-secondary">Integração</p>
@@ -49,14 +47,14 @@
                             uma combinação de sabores que surpreende até os paladares mais exigentes. Mais que um
                             Hambúrguer, uma Experiência</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">
-                            Nossos hamburgues</button>
+                            A vida no campoes</button>
                     </div>
                 </div>
             </div>
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagem/hamburguer6 .jpg" class="card-img-top" alt="Imagem dos hamburgues">
+                    <img src="imagem/parque_ibirapuera.jpg" class="card-img-top" alt="A vida na cidade">
                     <div class="card-body">
                         <h5 class="card-title">A vida na cidade</h5>
                         <p class="card-text">Aqui, cada mordida é uma explosão de sabor que vai conquistar seu paladar.
@@ -65,14 +63,14 @@
                             Seja no pão ou no prato, cada opção é pensada para oferecer uma experiência única e
                             deliciosa</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">
-                            Nossos hamburgues</button>
+                            A vida na cidade</button>
                     </div>
                 </div>
             </div>
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                    <img src="imagem/image.png" class="card-img-top" alt="Imagem dos hamburguens">
                     <div class="card-body">
                         <h5 class="card-title">A conexão Campo-Cidade
                         </h5>
@@ -82,7 +80,7 @@
                             tradição em cada mordida.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal"
-                            data-bs-target="#modal3">Nossos hamburgues</button>
+                            data-bs-target="#modal3">A conexão Campo-Cidade</button>
                     </div>
                 </div>
             </div>
@@ -91,7 +89,7 @@
             <!-- Projeto 4 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagem/hamburguer5 .jpg" class="card-img-top" alt="Imagem dos hamburguens">
+                    <img src="imagem/blog-1475.jpg" class="card-img-top" alt="Imagem dos hamburguens">
                     <div class="card-body">
                         <h5 class="card-title">Expressões culturais compartilhadas
                         </h5>
@@ -103,8 +101,7 @@
                             em cada mordida.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal"
-                            data-bs-target="#modal4">Nossos
-                            hamburgues</button>
+                            data-bs-target="#modal4">Expressões culturais compartilhadas</button>
                     </div>
                 </div>
             </div>
