--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="imagem/images.jpeg" alt="hamburguer" class="rounded-circle" width="150" height="150" srcset="">
+        <img src="imagem/images.jpeg" alt="Campo-Cidade" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Entre a lida e a vida urbana</p>
         <h1>FESTEJANDO A CONEXÃO CAMPO-CIDADE</h1>
         <p>Festejar a conexão entre o campo e a cidade é celebrar a união entre a origem e o destino de tudo que nos alimenta e nos move.</p>
@@ -34,20 +34,19 @@
                     <img src="imagem/infoimg.jpg" class="card-img-top" alt="vida no campo ">
                     <div class="card-body">
                         <h5 class="card-title">A vida no campo</h5>
-                        <p class="card-text">Localizada no coração de Curitiba, nossa hamburgueria é um verdadeiro
-                            refúgio para os amantes de um bom
-                            hambúrguer. Com um compromisso inabalável com a qualidade, buscamos trazer uma experiência
-                            única em cada mordida,
-                            oferecendo não apenas um prato, mas uma verdadeira celebração do sabor.
-                            A Arte do Hambúrguer
-                            Cada hambúrguer que preparamos é uma obra de arte feita com ingredientes frescos,
-                            selecionados com carinho, e que refletem a autenticidade e o
-                            espírito curitibano. Nossa carne é 100% Angus, sem aditivos, e as opções de pães artesanais,
-                            molhos exclusivos e acompanhamentos criativos garantem
-                            uma combinação de sabores que surpreende até os paladares mais exigentes. Mais que um
-                            Hambúrguer, uma Experiência</p>
+                        <p class="card-text">A vida na cidade é marcada pelo movimento, pela diversidade e pela presença de muitos serviços públicos importantes.
+                             É nas áreas urbanas que encontramos escolas, hospitais, postos de saúde, transporte coletivo, praças e centros culturais. 
+                             Esses espaços ajudam a organizar a rotina dos moradores e garantem o acesso a direitos básicos
+                             Um dos aspectos mais interessantes da cidade é a diversidade cultural. 
+                             Pessoas de diferentes regiões e histórias convivem no mesmo espaço, o que enriquece a convivência e permite o contato com diferentes formas de viver,
+                              vestir, falar e se expressar. Essa mistura aparece em eventos urbanos, como festas, feiras, shows e exposições.
+                             Como parte do projeto, realizamos um passeio pela cidade, observando seus espaços mais importantes.
+                             Com isso, fizemos o mapeamento de áreas urbanas, como praças, mercados, escolas e centros comerciais.
+                             Os alunos produziram diferentes trabalhos a partir da experiência: fotos do cotidiano urbano, maquetes de prédios e praças,
+                              mapas mentais sobre os espaços visitados e entrevistas com moradores. Através dessas atividades, entenderam como a cidade funciona, 
+                              como é viver nela e como ela se conecta com o campo, mostrando que ambos os ambientes são diferentes, mas se complementam e dependem um do outro.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">
-                            A vida no campoes</button>
+                            A vida no campos</button>
                     </div>
                 </div>
             </div>
