--- a/index.html
+++ b/index.html
@@ -34,17 +34,11 @@
                     <img src="imagem/infoimg.jpg" class="card-img-top" alt="vida no campo ">
                     <div class="card-body">
                         <h5 class="card-title">A vida no campo</h5>
-                        <p class="card-text">A vida na cidade é marcada pelo movimento, pela diversidade e pela presença de muitos serviços públicos importantes.
-                             É nas áreas urbanas que encontramos escolas, hospitais, postos de saúde, transporte coletivo, praças e centros culturais. 
-                             Esses espaços ajudam a organizar a rotina dos moradores e garantem o acesso a direitos básicos
-                             Um dos aspectos mais interessantes da cidade é a diversidade cultural. 
-                             Pessoas de diferentes regiões e histórias convivem no mesmo espaço, o que enriquece a convivência e permite o contato com diferentes formas de viver,
-                              vestir, falar e se expressar. Essa mistura aparece em eventos urbanos, como festas, feiras, shows e exposições.
-                             Como parte do projeto, realizamos um passeio pela cidade, observando seus espaços mais importantes.
-                             Com isso, fizemos o mapeamento de áreas urbanas, como praças, mercados, escolas e centros comerciais.
-                             Os alunos produziram diferentes trabalhos a partir da experiência: fotos do cotidiano urbano, maquetes de prédios e praças,
-                              mapas mentais sobre os espaços visitados e entrevistas com moradores. Através dessas atividades, entenderam como a cidade funciona, 
-                              como é viver nela e como ela se conecta com o campo, mostrando que ambos os ambientes são diferentes, mas se complementam e dependem um do outro.</p>
+                        <p class="card-text">A vida no campo é tranquila e conectada à natureza. O ritmo do dia segue o nascer e o pôr do sol. As pessoas cultivam a terra, 
+                         cuidam dos animais e produzem alimentos como hortaliças, frutas, queijos, pães e geleias caseira.
+                         O campo preserva tradições, como as festas juninas, que celebram a colheita com danças, músicas, comidas típicas e muita alegria.
+                         Há um forte senso de comunidade, onde todos se conhecem e se ajudam. O contato com a terra, 
+                         o ar puro e o silêncio tornam o campo um lugar especial para viver com simplicidade e equilíbrio.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">
                             A vida no campos</button>
                     </div>
@@ -56,11 +50,17 @@
                     <img src="imagem/parque_ibirapuera.jpg" class="card-img-top" alt="A vida na cidade">
                     <div class="card-body">
                         <h5 class="card-title">A vida na cidade</h5>
-                        <p class="card-text">Aqui, cada mordida é uma explosão de sabor que vai conquistar seu paladar.
-                            Nossos hambúrgueres são preparados com ingredientes frescos e selecionados, combinados com
-                            muito carinho e dedicação.
-                            Seja no pão ou no prato, cada opção é pensada para oferecer uma experiência única e
-                            deliciosa</p>
+                        <p class="card-text">A vida na cidade é marcada pelo movimento, pela diversidade e pela presença de muitos serviços públicos importantes.
+                             É nas áreas urbanas que encontramos escolas, hospitais, postos de saúde, transporte coletivo, praças e centros culturais. 
+                             Esses espaços ajudam a organizar a rotina dos moradores e garantem o acesso a direitos básicos
+                             Um dos aspectos mais interessantes da cidade é a diversidade cultural. 
+                             Pessoas de diferentes regiões e histórias convivem no mesmo espaço, o que enriquece a convivência e permite o contato com diferentes formas de viver,
+                            vestir, falar e se expressar. Essa mistura aparece em eventos urbanos, como festas, feiras, shows e exposições.
+                             Como parte do projeto, realizamos um passeio pela cidade, observando seus espaços mais importantes.
+                             Com isso, fizemos o mapeamento de áreas urbanas, como praças, mercados, escolas e centros comerciais.
+                             Os alunos produziram diferentes trabalhos a partir da experiência: fotos do cotidiano urbano, maquetes de prédios e praças,
+                              mapas mentais sobre os espaços visitados e entrevistas com moradores. Através dessas atividades, entenderam como a cidade funciona, 
+                              como é viver nela e como ela se conecta com o campo, mostrando que ambos os ambientes são diferentes, mas se complementam e dependem um do outro</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">
                             A vida na cidade</button>
                     </div>
