--- a/index.html
+++ b/index.html
@@ -50,17 +50,12 @@
                     <img src="imagem/parque_ibirapuera.jpg" class="card-img-top" alt="A vida na cidade">
                     <div class="card-body">
                         <h5 class="card-title">A vida na cidade</h5>
-                        <p class="card-text">A vida na cidade é marcada pelo movimento, pela diversidade e pela presença de muitos serviços públicos importantes.
-                             É nas áreas urbanas que encontramos escolas, hospitais, postos de saúde, transporte coletivo, praças e centros culturais. 
-                             Esses espaços ajudam a organizar a rotina dos moradores e garantem o acesso a direitos básicos
-                             Um dos aspectos mais interessantes da cidade é a diversidade cultural. 
-                             Pessoas de diferentes regiões e histórias convivem no mesmo espaço, o que enriquece a convivência e permite o contato com diferentes formas de viver,
-                            vestir, falar e se expressar. Essa mistura aparece em eventos urbanos, como festas, feiras, shows e exposições.
-                             Como parte do projeto, realizamos um passeio pela cidade, observando seus espaços mais importantes.
-                             Com isso, fizemos o mapeamento de áreas urbanas, como praças, mercados, escolas e centros comerciais.
-                             Os alunos produziram diferentes trabalhos a partir da experiência: fotos do cotidiano urbano, maquetes de prédios e praças,
-                              mapas mentais sobre os espaços visitados e entrevistas com moradores. Através dessas atividades, entenderam como a cidade funciona, 
-                              como é viver nela e como ela se conecta com o campo, mostrando que ambos os ambientes são diferentes, mas se complementam e dependem um do outro</p>
+                        <p class="card-text">A vida na cidade é agitada e cheia de movimento. O ritmo é rápido, com muitas pessoas, carros e prédios. 
+                         A cidade oferece diversos serviços, como escolas, hospitais, transporte público e centros comerciais.
+                         A diversidade cultural é grande, com pessoas de diferentes origens e tradições convivendo no mesmo espaço. 
+                         Eventos culturais, festas e shows animam as ruas e fortalecem a vida urbana.
+                         Apesar do barulho e do trânsito, a cidade oferece oportunidades de trabalho, educação e lazer.
+                         É um lugar onde as conexões humanas e o acesso a serviços fazem a vida ser intensa e dinâmica </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">
                             A vida na cidade</button>
                     </div>
@@ -73,11 +68,14 @@
                     <div class="card-body">
                         <h5 class="card-title">A conexão Campo-Cidade
                         </h5>
-                        <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos
-                            e selecionados para criar
-                            combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da
-                            tradição em cada mordida.
-                        </p>
+                        <p class="card-text">O campo e a cidade são espaços diferentes, mas profundamente conectados.
+                             O campo produz alimentos, matérias-primas e preserva tradições, 
+                             enquanto a cidade oferece serviços, comércio e oportunidades de trabalho.
+                             Essa relação é uma troca constante: produtos do campo chegam à cidade para alimentar as pessoas, 
+                             e os recursos urbanos ajudam no desenvolvimento rural.
+                             Culturalmente, também há uma troca, com festas, costumes e saberes que se misturam e enriquecem ambos os lugares.
+                            Entender essa conexão é valorizar o equilíbrio entre a vida rural e urbana, 
+                            reconhecendo que ambos dependem um do outro para crescer e prosperar.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal"
                             data-bs-target="#modal3">A conexão Campo-Cidade</button>
                     </div>
@@ -92,13 +90,11 @@
                     <div class="card-body">
                         <h5 class="card-title">Expressões culturais compartilhadas
                         </h5>
-                        <p class="card-text">cada hambúrguer é uma obra-prima artesanal. Utilizamos ingredientes frescos
-                            e
-                            selecionados para criar
-                            combinações de sabores que encantam o paladar. Venha experimentar o verdadeiro sabor da
-                            tradição
-                            em cada mordida.
-                        </p>
+                        <p class="card-text">As expressões culturais compartilhadas são manifestações que unem pessoas de diferentes lugares, como o campo e a cidade.
+                             Festas populares, danças, músicas, artesanato e culinária tradicional são exemplos que mostram a riqueza dessas trocas culturais.
+                             Essas expressões refletem a história, os valores e as crenças das comunidades, criando identidade e pertencimento. No Brasil, 
+                             festas como as juninas e o carnaval reúnem elementos rurais e urbanos, fortalecendo a cultura nacional.
+                             Valorizar essas manifestações é essencial para manter viva a diversidade cultural e promover o respeito entre diferentes formas de viver e celebrar.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal"
                             data-bs-target="#modal4">Expressões culturais compartilhadas</button>
                     </div>
